Fixed spacing and scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -626,18 +626,26 @@ th, td {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: start;
-	column-gap: calc(var(--flex-gap) * 4) !important;
+	column-gap: var(--flex-gap) !important;
 }
 
 @media screen and (min-aspect-ratio: 2.2) and (min-width: 1440px) {
   .obz-container {
     display: flex;
 	align-items: start;
-	column-gap: calc(var(--flex-gap) * 4) !important;
+	column-gap: calc(var(--flex-gap) * 1) !important;
   }
 
   .obz-tables-container {
     display: block;
+	overflow-y: scroll;
+	height: calc(100vh - var(--site-header__height) - (var(--nav__border-width) * 2) - (var(--flex-gap) * 2));
+	padding-left: var(--flex-gap);
+	padding-right: var(--flex-gap);
+	padding-top: var(--flex-gap);
+	border: 2px solid var(--table__border-color--thick);
+	background: rgba(0, 0, 0, 0.5);
+	scrollbar-color: #666 #2a2a2a;
   }
 }
 
